testing/framework/resources/Advanced/Failing/mondrian/query2763.e
USA	CA	Beverly Hills	Store 6	Gourmet Supermarket	Maris	23688	15337	5011	3340	t	5495 Mitchell Canyon Road
USA	CA	Los Angeles	Store 7	Supermarket	White	23598	14210	5633	3755	f	1077 Wharf Drive
USA	CA	San Diego	Store 24	Supermarket	Byrd	\N	\N	\N	\N	t	2342 Waltham St.
USA	CA	San Francisco	Store 14	Small Grocery	Strehlo	22478	15321	4294	2863	t	4365 Indigo Ct
